--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>On Visibility</title>
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Font Awesome corrigido -->
+  <!-- Font Awesome -->
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -32,7 +32,17 @@
       100% { background-position: 0% 50%; }
     }
 
-    /* Ícone flutuante do WhatsApp com pulso */
+    /* Navbar efeito */
+    .navbar {
+      background-color: rgba(0,0,0,0.7);
+      transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
+    .navbar.scrolled {
+      background-color: rgba(0,0,0,0.95);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+    }
+
+    /* Botão WhatsApp com pulso */
     .whatsapp-float {
       position: fixed;
       width: 60px;
@@ -55,19 +65,13 @@
     .whatsapp-float:hover {
       transform: scale(1.2);
     }
+    .whatsapp-float i {
+      line-height: 0;
+    }
     @keyframes pulse {
       0% { transform: scale(1); }
       50% { transform: scale(1.1); }
       100% { transform: scale(1); }
-    }
-
-    /* Navbar efeito */
-    .navbar {
-      transition: background-color 0.3s ease, box-shadow 0.3s ease;
-    }
-    .navbar.scrolled {
-      background-color: rgba(0,0,0,0.9);
-      box-shadow: 0 2px 10px rgba(0,0,0,0.5);
     }
   </style>
 </head>
@@ -76,7 +80,6 @@
   <!-- Navbar -->
   <header class="fixed w-full top-0 z-50 navbar">
     <nav class="flex justify-between items-center px-6 md:px-20 py-4 text-white">
-      
       <!-- LOGO SVG -->
       <a href="#" aria-label="On Visibility" class="flex items-center">
         <svg width="180" height="60" viewBox="0 0 420 100" xmlns="http://www.w3.org/2000/svg">
@@ -86,14 +89,11 @@
               <stop offset="100%" stop-color="#EC4899"/>
             </linearGradient>
           </defs>
-          <!-- Quadrado com ON -->
           <rect x="10" y="20" width="70" height="70" rx="14" fill="none" stroke="url(#onv-grad)" stroke-width="4"/>
           <text x="45" y="65" text-anchor="middle" font-size="32" font-weight="700" fill="url(#onv-grad)">ON</text>
-          <!-- Texto Visibility -->
           <text x="100" y="70" font-size="36" font-weight="800" fill="url(#onv-grad)">Visibility</text>
         </svg>
       </a>
-
       <ul class="hidden md:flex gap-6">
         <li><a href="#sobre" class="hover:text-pink-400">Sobre</a></li>
         <li><a href="#servicos" class="hover:text-pink-400">Serviços</a></li>
@@ -165,9 +165,12 @@
     <p>&copy; 2025 On Visibility - Todos os direitos reservados</p>
   </footer>
 
-  <!-- Botão WhatsApp -->
-  <a href="https://wa.me/5599999999999" target="_blank" class="whatsapp-float">
+  <!-- Botão WhatsApp com Tooltip -->
+  <a href="https://wa.me/5599999999999" target="_blank" class="whatsapp-float group relative">
     <i class="fa-brands fa-whatsapp"></i>
+    <span class="absolute bottom-full mb-2 left-1/2 transform -translate-x-1/2 opacity-0 group-hover:opacity-100 bg-black text-white text-sm rounded py-1 px-2 whitespace-nowrap transition-opacity">
+      Fale conosco
+    </span>
   </a>
 
   <!-- Script Navbar Scroll -->
