--- a/index.html
+++ b/index.html
@@ -44,28 +44,28 @@
       box-shadow: 0 2px 10px rgba(0,0,0,0.5);
     }
 
-    /* Botão WhatsApp com pulso */
+    /* Botão WhatsApp fixo lateral esquerda */
     .whatsapp-float {
       position: fixed;
+      top: 50%;               /* Centralizado verticalmente */
+      left: 20px;             /* Encostado na esquerda */
+      transform: translateY(-50%); /* Corrige centralização */
       width: 60px;
       height: 60px;
-      bottom: 20px;
-      left: 20px; /* Mudado para o lado esquerdo */
       background-color: #25d366;
       color: #fff;
       border-radius: 50%;
-      text-align: center;
       font-size: 30px;
-      box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
-      z-index: 100;
       display: flex;
       align-items: center;
       justify-content: center;
+      box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+      z-index: 1000;
       transition: transform 0.2s ease-in-out;
       animation: pulse 2s infinite;
     }
     .whatsapp-float:hover {
-      transform: scale(1.2);
+      transform: translateY(-50%) scale(1.2);
     }
     @keyframes pulse {
       0% { transform: scale(1); }
@@ -164,8 +164,8 @@
     <p>&copy; 2025 On Visibility - Todos os direitos reservados</p>
   </footer>
 
-  <!-- Botão WhatsApp -->
-  <a href="https://wa.me/5599999999999" target="_blank" class="whatsapp-float group relative">
+  <!-- Botão WhatsApp fixo lateral esquerda -->
+  <a href="https://wa.me/5599999999999" target="_blank" class="whatsapp-float">
     <i class="fa-brands fa-whatsapp"></i>
   </a>
 
