--- a/index.html
+++ b/index.html
@@ -44,33 +44,29 @@
       box-shadow: 0 2px 10px rgba(0,0,0,0.5);
     }
 
-    /* Botão WhatsApp fixo lateral esquerda */
-    .whatsapp-float {
-      position: fixed;
-      top: 50%;               /* Centralizado verticalmente */
-      left: 20px;             /* Encostado na esquerda */
-      transform: translateY(-50%); /* Corrige centralização */
-      width: 60px;
-      height: 60px;
-      background-color: #25d366;
-      color: #fff;
-      border-radius: 50%;
-      font-size: 30px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
-      z-index: 1000;
-      transition: transform 0.2s ease-in-out;
-      animation: pulse 2s infinite;
-    }
-    .whatsapp-float:hover {
-      transform: translateY(-50%) scale(1.2);
-    }
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.1); }
-      100% { transform: scale(1); }
+
+.whatsapp-float {
+  position: fixed;
+  bottom: 20px;       /* distância do fundo */
+  right: 20px;        /* distância da direita */
+  width: 60px;
+  height: 60px;
+  background-color: #25d366;
+  color: #fff;
+  border-radius: 50%;
+  font-size: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+  z-index: 1000;
+  transition: transform 0.2s ease-in-out;
+  animation: pulse 2s infinite;
+}
+.whatsapp-float:hover {
+  transform: scale(1.2);
+}
+
     }
   </style>
 </head>
@@ -191,3 +187,4 @@
   </script>
 </body>
 </html>
+
