--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
   <!-- Sobre -->
   <section id="sobre" class="py-20 px-6 md:px-20" data-aos="fade-right">
     <h2 class="text-3xl font-bold text-center mb-8 text-purple-400">Sobre Nós</h2>
-    <p class="max-w-3xl mx-auto text-center text-gray-300">Aqui vai uma breve apresentação do profissional ou negócio, destacando a história, missão e valores.</p>
+    <p class="max-w-3xl mx-auto text-center text-gray-300">Na On Visibility, ajudamos empresas e negócios a conquistarem presença digital de forma profissional e acessível.
+Criamos sites One Page modernos, rápidos e adaptados à identidade visual de cada cliente. Nossa missão é transformar sua ideia em um site que realmente gere resultados.</p>
   </section>
 
   <!-- Serviços -->
@@ -116,29 +117,33 @@
     <h2 class="text-3xl font-bold text-center mb-12 text-pink-400">Nossos Serviços</h2>
     <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
       <div class="p-6 bg-black rounded-2xl shadow-lg" data-aos="zoom-in">
-        <h3 class="text-xl font-semibold mb-3 text-purple-300">Serviço 1</h3>
-        <p class="text-gray-400">Descrição breve do serviço oferecido.</p>
+        <h3 class="text-xl font-semibold mb-3 text-purple-300">Criação de Sites One Page</h3>
+        <p class="text-gray-400">Desenvolvemos sites modernos e objetivos, perfeitos para destacar sua empresa em uma única página clara e atrativa. Design responsivo e adaptado à sua identidade visual.</p>
       </div>
       <div class="p-6 bg-black rounded-2xl shadow-lg" data-aos="zoom-in" data-aos-delay="200">
-        <h3 class="text-xl font-semibold mb-3 text-purple-300">Serviço 2</h3>
-        <p class="text-gray-400">Descrição breve do serviço oferecido.</p>
+        <h3 class="text-xl font-semibold mb-3 text-purple-300">Personalização para Negócios</h3>
+        <p class="text-gray-400">Cada site é feito sob medida para o seu negócio, com cores, estilos e conteúdos que refletem a essência da sua marca. Você recebe um site único, não um modelo pronto.</p>
       </div>
       <div class="p-6 bg-black rounded-2xl shadow-lg" data-aos="zoom-in" data-aos-delay="400">
-        <h3 class="text-xl font-semibold mb-3 text-purple-300">Serviço 3</h3>
-        <p class="text-gray-400">Descrição breve do serviço oferecido.</p>
+        <h3 class="text-xl font-semibold mb-3 text-purple-300">Otimização e Resultados</h3>
+        <p class="text-gray-400">Aplicamos técnicas de SEO básico e design estratégico para que seu site carregue rápido, apareça bem no Google e ajude você a conquistar novos clientes.</p>
       </div>
     </div>
   </section>
 
   <!-- Nosso Espaço -->
-  <section id="espaco" class="py-20 px-6 md:px-20" data-aos="fade-left">
-    <h2 class="text-3xl font-bold text-center mb-8 text-purple-400">Nosso Espaço</h2>
-    <div class="grid md:grid-cols-3 gap-6 max-w-6xl mx-auto">
-      <img src="https://via.placeholder.com/400" class="rounded-xl shadow-lg hover:scale-105 transition" alt="Espaço 1" data-aos="zoom-in">
-      <img src="https://via.placeholder.com/400" class="rounded-xl shadow-lg hover:scale-105 transition" alt="Espaço 2" data-aos="zoom-in" data-aos-delay="200">
-      <img src="https://via.placeholder.com/400" class="rounded-xl shadow-lg hover:scale-105 transition" alt="Espaço 3" data-aos="zoom-in" data-aos-delay="400">
-    </div>
-  </section>
+ <section id="OndeAtuamos" class="py-20 px-6 md:px-20" data-aos="fade-left">
+  <h2 class="text-3xl font-bold text-center mb-8 text-purple-400">Onde Atuamos</h2>
+  
+  <!-- Caixa única de texto -->
+  <div class="max-w-3xl mx-auto bg-gray-800 text-white p-8 rounded-xl shadow-lg hover:shadow-xl transition" data-aos="zoom-in">
+    <h3 class="text-2xl font-semibold mb-4 text-center">Atendimento 100% Online</h3>
+    <p class="text-center text-lg">
+     Atendemos empresas de todo o Brasil 
+    </p>
+  </div>
+</section>
+
 
   <!-- Depoimentos -->
   <section id="depoimentos" class="py-20 px-6 md:px-20 bg-gray-900" data-aos="fade-up">
@@ -146,11 +151,11 @@
     <div class="grid md:grid-cols-2 gap-8 max-w-5xl mx-auto">
       <blockquote class="p-6 bg-black rounded-xl shadow-lg" data-aos="flip-left">
         <p class="italic text-gray-300">"Excelente atendimento, recomendo muito!"</p>
-        <footer class="mt-4 text-sm text-gray-500">– Cliente A</footer>
+        <footer class="mt-4 text-sm text-gray-500">–</footer>
       </blockquote>
       <blockquote class="p-6 bg-black rounded-xl shadow-lg" data-aos="flip-right" data-aos-delay="200">
         <p class="italic text-gray-300">"Serviço de qualidade e profissionalismo!"</p>
-        <footer class="mt-4 text-sm text-gray-500">– Cliente B</footer>
+        <footer class="mt-4 text-sm text-gray-500">– </footer>
       </blockquote>
     </div>
   </section>
@@ -161,7 +166,7 @@
   </footer>
 
   <!-- Botão WhatsApp fixo lateral esquerda -->
-  <a href="https://wa.me/5599999999999" target="_blank" class="whatsapp-float">
+  <a href="https://wa.me/5511940122433" target="_blank" class="whatsapp-float">
     <i class="fa-brands fa-whatsapp"></i>
   </a>
 
@@ -187,4 +192,5 @@
   </script>
 </body>
 </html>
+
 
