--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
   <!-- Hero -->
   <section class="h-screen gradient-animated flex flex-col justify-center items-center text-white text-center" data-aos="fade-up">
-    <h1 class="text-5xl md:text-6xl font-extrabold drop-shadow-lg">Ryan Henrique dos Santos</h1>
-    <p class="mt-4 text-xl md:text-2xl">Slogan ou descrição curta</p>
+    <h1 class="text-5xl md:text-6xl font-extrabold drop-shadow-lg">On Visibility</h1>
+    <p class="mt-4 text-xl md:text-2xl">Transformamos seu negócio em presença digital de impacto, aumentando sua visibilidade e resultados.</p>
     <a href="#sobre" class="mt-8 px-8 py-3 bg-black text-white font-semibold rounded-full shadow-lg hover:bg-gray-800 transition">Saiba Mais</a>
   </section>
 
@@ -192,5 +192,6 @@ Criamos sites One Page modernos, rápidos e adaptados à identidade visual de ca
   </script>
 </body>
 </html>
+
 
 
