--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       scroll-behavior: smooth;
     }
 
+    body {
+      min-height: 100vh;
+      position: relative;
+      padding-bottom: 100px; /* espaço para o footer */
+    }
+
     /* Animação gradiente */
     .gradient-animated {
       background: linear-gradient(135deg, #7e22ce, #ec4899, #7e22ce);
@@ -44,30 +50,34 @@
       box-shadow: 0 2px 10px rgba(0,0,0,0.5);
     }
 
-
-.whatsapp-float {
-  position: fixed;
-  bottom: 20px;       /* distância do fundo */
-  right: 20px;        /* distância da direita */
-  width: 60px;
-  height: 60px;
-  background-color: #25d366;
-  color: #fff;
-  border-radius: 50%;
-  font-size: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
-  z-index: 1000;
-  transition: transform 0.2s ease-in-out;
-  animation: pulse 2s infinite;
-}
-.whatsapp-float:hover {
-  transform: scale(1.2);
-}
-
+    /* Botão WhatsApp fixo */
+    .whatsapp-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 60px;
+      height: 60px;
+      background-color: #25d366;
+      color: #fff;
+      border-radius: 50%;
+      font-size: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+      z-index: 1000;
+      transition: transform 0.2s ease-in-out;
+      animation: pulse 2s infinite;
     }
+    .whatsapp-float:hover {
+      transform: scale(1.2);
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.2); }
+    }
+
   </style>
 </head>
 <body class="bg-black text-gray-200 font-sans">
@@ -135,7 +145,6 @@ Criamos sites One Page modernos, rápidos e adaptados à identidade visual de ca
  <section id="OndeAtuamos" class="py-20 px-6 md:px-20" data-aos="fade-left">
   <h2 class="text-3xl font-bold text-center mb-8 text-purple-400">Onde Atuamos</h2>
   
-  <!-- Caixa única de texto -->
   <div class="max-w-3xl mx-auto bg-gray-800 text-white p-8 rounded-xl shadow-lg hover:shadow-xl transition" data-aos="zoom-in">
     <h3 class="text-2xl font-semibold mb-4 text-center">Atendimento 100% Online</h3>
     <p class="text-center text-lg">
@@ -143,7 +152,6 @@ Criamos sites One Page modernos, rápidos e adaptados à identidade visual de ca
     </p>
   </div>
 </section>
-
 
   <!-- Depoimentos -->
   <section id="depoimentos" class="py-20 px-6 md:px-20 bg-gray-900" data-aos="fade-up">
@@ -165,7 +173,7 @@ Criamos sites One Page modernos, rápidos e adaptados à identidade visual de ca
     <p>&copy; 2025 On Visibility - Todos os direitos reservados</p>
   </footer>
 
-  <!-- Botão WhatsApp fixo lateral esquerda -->
+  <!-- Botão WhatsApp fixo lateral direita -->
   <a href="https://wa.me/5511940122433" target="_blank" class="whatsapp-float">
     <i class="fa-brands fa-whatsapp"></i>
   </a>
@@ -192,6 +200,3 @@ Criamos sites One Page modernos, rápidos e adaptados à identidade visual de ca
   </script>
 </body>
 </html>
-
-
-
