--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+      box-shadow: 0 0 8px rgba(0,0,0,0.2); /* sombra suavizada */
+      background-clip: padding-box; /* evita linha preta */
       z-index: 1000;
       transition: transform 0.2s ease-in-out;
       animation: pulse 2s infinite;
@@ -76,6 +77,17 @@
     @keyframes pulse {
       0%, 100% { transform: scale(1); }
       50% { transform: scale(1.2); }
+    }
+
+    @media (max-width: 768px) {
+      .whatsapp-float {
+        box-shadow: none;
+      }
+    }
+
+    /* Ajuste altura completa para mobile */
+    .full-vh {
+      height: 100dvh; /* corrige altura do viewport em smartphones */
     }
 
   </style>
@@ -109,7 +121,7 @@
   </header>
 
   <!-- Hero -->
-  <section class="h-screen gradient-animated flex flex-col justify-center items-center text-white text-center" data-aos="fade-up">
+  <section class="min-h-screen full-vh gradient-animated flex flex-col justify-center items-center text-white text-center" data-aos="fade-up">
     <h1 class="text-5xl md:text-6xl font-extrabold drop-shadow-lg">On Visibility</h1>
     <p class="mt-4 text-xl md:text-2xl">Transformamos seu negócio em presença digital de impacto, aumentando sua visibilidade e resultados.</p>
     <a href="#sobre" class="mt-8 px-8 py-3 bg-black text-white font-semibold rounded-full shadow-lg hover:bg-gray-800 transition">Saiba Mais</a>
