--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
       min-height: 100vh; /* fallback para desktop */
     }
 
+    /* Logo Visibility animado */
+    #logo-visibility {
+      transition: opacity 0.3s ease, transform 0.3s ease;
+    }
+    .hidden-visibility {
+      opacity: 0;
+      transform: translateX(20px);
+    }
+
   </style>
 </head>
 <body class="bg-black text-gray-200 font-sans">
@@ -99,16 +108,16 @@
     <nav class="flex justify-between items-center px-6 md:px-20 py-4 text-white">
       <!-- LOGO -->
       <a href="#" aria-label="On Visibility" class="flex items-center">
-        <svg width="180" height="60" viewBox="0 0 420 100" xmlns="http://www.w3.org/2000/svg">
+        <svg width="220" height="60" viewBox="0 0 420 100" xmlns="http://www.w3.org/2000/svg">
           <defs>
             <linearGradient id="onv-grad" x1="0%" y1="0%" x2="100%" y2="100%">
               <stop offset="0%" stop-color="#7C3AED"/>
               <stop offset="100%" stop-color="#EC4899"/>
             </linearGradient>
           </defs>
-          <rect x="10" y="20" width="70" height="70" rx="14" fill="none" stroke="url(#onv-grad)" stroke-width="4"/>
-          <text x="45" y="65" text-anchor="middle" font-size="32" font-weight="700" fill="url(#onv-grad)">ON</text>
-          <text x="100" y="70" font-size="36" font-weight="800" fill="url(#onv-grad)">Visibility</text>
+          <rect x="10" y="20" width="200" height="70" rx="14" fill="none" stroke="url(#onv-grad)" stroke-width="4"/>
+          <text id="logo-on" x="45" y="65" text-anchor="middle" font-size="32" font-weight="700" fill="url(#onv-grad)">ON</text>
+          <text id="logo-visibility" x="140" y="65" text-anchor="start" font-size="32" font-weight="700" fill="url(#onv-grad)">Visibility</text>
         </svg>
       </a>
       <ul class="hidden md:flex gap-6">
@@ -156,7 +165,6 @@ Criamos sites One Page modernos, rápidos e adaptados à identidade visual de ca
   <!-- Nosso Espaço -->
  <section id="OndeAtuamos" class="py-20 px-6 md:px-20" data-aos="fade-left">
   <h2 class="text-3xl font-bold text-center mb-8 text-purple-400">Onde Atuamos</h2>
-  
   <div class="max-w-3xl mx-auto bg-gray-800 text-white p-8 rounded-xl shadow-lg hover:shadow-xl transition" data-aos="zoom-in">
     <h3 class="text-2xl font-semibold mb-4 text-center">Atendimento 100% Online</h3>
     <p class="text-center text-lg">
@@ -174,57 +182,58 @@ Criamos sites One Page modernos, rápidos e adaptados à identidade visual de ca
         <footer class="mt-4 text-sm text-gray-500">–</footer>
       </blockquote>
       <blockquote class="p-6 bg-black rounded-xl shadow-lg" data-aos="flip-right" data-aos-delay="200">
-        <p class="italic text-gray-300">"Serviço de qualidade e profissionalismo!"</p>
-        <footer class="mt-4 text-sm text-gray-500">– </footer>
-      </blockquote>
-    </div>
-  </section>
+              <p class="italic text-gray-300">"Serviço de qualidade e profissionalismo!"</p>
+      <footer class="mt-4 text-sm text-gray-500">– </footer>
+    </blockquote>
+  </div>
+</section>
 
-  <!-- Rodapé -->
-  <footer class="py-6 text-center bg-black border-t border-gray-800 text-gray-500" data-aos="fade-in">
-    <p>&copy; 2025 On Visibility - Todos os direitos reservados</p>
-  </footer>
+<!-- Rodapé -->
+<footer class="py-6 text-center bg-black border-t border-gray-800 text-gray-500" data-aos="fade-in">
+  <p>&copy; 2025 On Visibility - Todos os direitos reservados</p>
+</footer>
 
-  <!-- Botão WhatsApp fixo lateral direita -->
-  <a href="https://wa.me/5511940122433" target="_blank" class="whatsapp-float">
-    <i class="fa-brands fa-whatsapp"></i>
-  </a>
+<!-- Botão WhatsApp fixo lateral direita -->
+<a href="https://wa.me/5511940122433" target="_blank" class="whatsapp-float">
+  <i class="fa-brands fa-whatsapp"></i>
+</a>
 
-  <!-- Script Navbar Scroll -->
-  <script>
-    window.addEventListener("scroll", function() {
-      const nav = document.querySelector(".navbar");
-      if (window.scrollY > 50) {
-        nav.classList.add("scrolled");
-      } else {
-        nav.classList.remove("scrolled");
-      }
-    });
-  </script>
-
-  <!-- AOS Script -->
-  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-  <script>
-    AOS.init({
-      duration: 1000,
-      once: true
-    });
-  </script>
-
-  <!-- Ajuste altura dinâmica do Hero -->
-  <script>
-    function ajustarAlturaHero() {
-      const hero = document.querySelector('.full-vh');
-      if(hero){
-        const vh = window.innerHeight * 0.01;
-        hero.style.setProperty('--vh', `${vh}px`);
-        hero.style.height = `calc(var(--vh, 1vh) * 100)`;
-      }
+<!-- Script Navbar Scroll -->
+<script>
+  window.addEventListener("scroll", function() {
+    const nav = document.querySelector(".navbar");
+    const visibilityText = document.getElementById("logo-visibility");
+    if (window.scrollY > 50) {
+      nav.classList.add("scrolled");
+      visibilityText.classList.add("hidden-visibility");
+    } else {
+      nav.classList.remove("scrolled");
+      visibilityText.classList.remove("hidden-visibility");
     }
-    window.addEventListener('load', ajustarAlturaHero);
-    window.addEventListener('resize', ajustarAlturaHero);
-    window.addEventListener('orientationchange', ajustarAlturaHero);
-  </script>
+  });
+</script>
+
+<!-- AOS Script -->
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init({
+    duration: 1000,
+    once: true
+  });
+</script>
+
+<script>
+  // Ajuste altura do Hero para mobile
+  function ajustarAlturaHero() {
+    const hero = document.querySelector('.full-vh');
+    if(hero){
+      hero.style.height = window.innerHeight + 'px';
+    }
+  }
+  window.addEventListener('load', ajustarAlturaHero);
+  window.addEventListener('resize', ajustarAlturaHero);
+</script>
 
 </body>
 </html>
+
