--- a/index.html
+++ b/index.html
@@ -99,11 +99,6 @@
       transform: translateX(20px);
     }
 
-    /* 🔥 Caixa do logo animando junto */
-    header svg rect {
-      transition: x 0.45s cubic-bezier(0.68,-0.55,0.27,1.55),
-                  width 0.45s cubic-bezier(0.68,-0.55,0.27,1.55);
-    }
   </style>
 </head>
 <body class="bg-black text-gray-200 font-sans">
@@ -113,16 +108,16 @@
     <nav class="flex justify-between items-center px-6 md:px-20 py-4 text-white">
       <!-- LOGO -->
       <a href="#" aria-label="On Visibility" class="flex items-center">
-        <svg width="220" height="60" viewBox="0 0 420 100" xmlns="http://www.w3.org/2000/svg">
+        <svg width="220" height="60" viewBox="0 0 220 80" xmlns="http://www.w3.org/2000/svg">
           <defs>
             <linearGradient id="onv-grad" x1="0%" y1="0%" x2="100%" y2="100%">
               <stop offset="0%" stop-color="#7C3AED"/>
               <stop offset="100%" stop-color="#EC4899"/>
             </linearGradient>
           </defs>
-          <rect x="10" y="20" width="200" height="70" rx="14" fill="none" stroke="url(#onv-grad)" stroke-width="4"/>
-          <text id="logo-on" x="45" y="65" text-anchor="middle" font-size="32" font-weight="700" fill="url(#onv-grad)">ON</text>
-          <text id="logo-visibility" x="140" y="65" text-anchor="start" font-size="32" font-weight="700" fill="url(#onv-grad)">Visibility</text>
+          <rect x="5" y="10" width="210" height="60" rx="14" fill="none" stroke="url(#onv-grad)" stroke-width="4"/>
+          <text id="logo-on" x="35" y="50" font-size="28" font-weight="700" fill="url(#onv-grad)">ON</text>
+          <text id="logo-visibility" x="85" y="50" font-size="28" font-weight="700" fill="url(#onv-grad)">Visibility</text>
         </svg>
       </a>
       <ul class="hidden md:flex gap-6">
@@ -205,65 +200,17 @@ Criamos sites One Page modernos, rápidos e adaptados à identidade visual de ca
 
 <!-- Script Navbar Scroll -->
 <script>
-  (function () {
+  window.addEventListener("scroll", function() {
     const nav = document.querySelector(".navbar");
-    const svg = document.querySelector("header svg");
-    if (!svg) return;
-
-    const rect = svg.querySelector("rect");
-    const onText = document.getElementById("logo-on");
-    const visText = document.getElementById("logo-visibility");
-
-    let full = null;
-    let onlyOn = null;
-
-    const padFull = 16;
-    const padOn   = 10;
-
-    function computeBoxes() {
-      if (!rect || !onText || !visText) return;
-      const onBox  = onText.getBBox();
-      const visBox = visText.getBBox();
-
-      const minX = Math.min(onBox.x, visBox.x);
-      const maxX = Math.max(onBox.x + onBox.width, visBox.x + visBox.width);
-      full = { x: Math.round(minX - padFull), width: Math.round((maxX - minX) + padFull * 2) };
-      onlyOn = { x: Math.round(onBox.x - padOn), width: Math.round(onBox.width + padOn * 2) };
-
-      rect.setAttribute("x", full.x);
-      rect.setAttribute("width", full.width);
+    const visibilityText = document.getElementById("logo-visibility");
+    if (window.scrollY > 50) {
+      nav.classList.add("scrolled");
+      visibilityText.classList.add("hidden-visibility");
+    } else {
+      nav.classList.remove("scrolled");
+      visibilityText.classList.remove("hidden-visibility");
     }
-
-    function applyStateByScroll() {
-      if (window.scrollY > 50) {
-        nav.classList.add("scrolled");
-        visText.classList.add("hidden-visibility");
-        if (onlyOn) {
-          rect.setAttribute("x", onlyOn.x);
-          rect.setAttribute("width", onlyOn.width);
-        }
-      } else {
-        nav.classList.remove("scrolled");
-        visText.classList.remove("hidden-visibility");
-        if (full) {
-          rect.setAttribute("x", full.x);
-          rect.setAttribute("width", full.width);
-        }
-      }
-    }
-
-    window.addEventListener("load", () => {
-      computeBoxes();
-      applyStateByScroll();
-    });
-
-    window.addEventListener("resize", () => {
-      computeBoxes();
-      applyStateByScroll();
-    });
-
-    window.addEventListener("scroll", applyStateByScroll);
-  })();
+  });
 </script>
 
 <!-- AOS Script -->
