--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
 
     /* Logo Visibility animado */
     #logo-visibility {
-      transition: opacity 0.3s ease, transform 0.3s ease;
+      transition: opacity 0.5s ease, transform 0.5s ease;
+      transform-origin: left center;
     }
     .hidden-visibility {
       opacity: 0;
-      transform: translateX(20px);
+      transform: translateX(30px) scale(0.8);
     }
 
   </style>
